1].Resolved institution logo resize issue on CRO 2].Resolved displaying of logged in user detail in popup on clicking user icon 3].Resolved Dob issue in CDL Apply 4].Resolved alignment issue of CDL Apply countdown display. 5].Changed ACL for reprocess from DEApplication to NRPRCS

--- a/app/styles/dashboard.css
+++ b/app/styles/dashboard.css
@@ -17,9 +17,13 @@
   display:block;
   border:none;
   border-bottom:1px solid #757575;
+  box-shadow: none;
 }
 
-.inputMaterial:focus { outline:none;}
+.inputMaterial:focus { 
+  outline:none;
+  box-shadow: none;
+}
 
 .inputMaterial ~ label         
 {
